--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.2.1",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "mysql2": "^3.9.0"
   }
 }
